--- a/responsiveStylesheet.css
+++ b/responsiveStylesheet.css
@@ -29,7 +29,15 @@
     }
 } */
 
-@media (max-width: 1600px) {
+@media (max-width: 1618px) {
+    .introWords{
+        font-size: 40pt;
+    }
+
+    .splashlist{
+        font-size: 18pt;
+    }
+
     .infoContainer{
         padding: 7%;
     }
@@ -60,19 +68,19 @@
     }
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1445px) {
     /*----------- splash box -----------*/
     #introBox{
         height: 70px;
     }
 
     .introWords{
-        font-size: 40pt;
+        font-size: 35pt;
         top: -47px;
     }
 
     #splashList{
-        font-size: 18pt;
+        font-size: 16pt;
     }
 
     /*----------- Portfolio Section -----------*/
@@ -117,7 +125,7 @@
     }
 }
 
-@media (max-width: 1150px) {
+@media (max-width: 1270px) {
     /*----------- splash box -----------*/
     #splashbox{
         grid-template-areas: 
@@ -137,7 +145,7 @@
     }
 
     .introWords{
-        font-size: 60pt;
+        font-size: 50pt;
     }
 
     #lineBox{
@@ -149,21 +157,21 @@
     }
 
     #verticalLine{
-        height: 40vh;
+        /* height: 35vh; */
         display: none;
         /* margin-top: -100px; */
     }
 
     #checkItOut{
-        top: 0;
+        top: 20px;
         margin: 0;
-        font-size: 14pt;
+        font-size: 12pt;
         border-left: 1.5px solid black;
-        height: 45vh;
+        height: 40vh;
     }
 
     #checkItOut span{
-        font-size: 25pt;
+        font-size: 18pt;
         position: relative;
         left: 3px;
     }
@@ -171,8 +179,8 @@
     #splashList{
         box-sizing: border-box;
         grid-area: c;
-        top: 0;
-        font-size: 24pt;
+        top: 20px;
+        font-size: 18pt;
         line-height: 54pt;
         /* border-left: 1.5px solid black; */
 
@@ -199,6 +207,10 @@
     /*----------- splash box -----------*/
     #splashbox{
         grid-template-columns: 0.3fr 50px 1.6fr;
+    }
+
+    .introWords{
+        font-size: 45pt;
     }
 
     /* ------- Portfolio Section -------*/
@@ -252,7 +264,7 @@
     }
 }
 
-@media (max-width: 825px) {
+@media (max-width: 845px) {
     /*----------- splash box -----------*/
     #introBox{
         align-self: flex-end;
@@ -261,14 +273,19 @@
     }
 
     .introWords{
-        font-size: 45pt;
+        font-size: 35pt;
+        letter-spacing: 0.7px;
     }
 
     #splashList{
         box-sizing: border-box;
-        font-size: 20pt;
+        font-size: 16pt;
         width: 100%;
         padding: 0 0 0 10%;
+    }
+
+    #checkItOut{
+        font-size: 10pt;
     }
 
     #CircleOutlineSolid1{
@@ -283,7 +300,6 @@
     .projects{
         width: 78vw;
         height: 78vw;
-        
     }
 
     .infoContainer{
@@ -327,6 +343,10 @@
     }
 
     /* ------- About Section -------*/
+    #aboutParagraph{
+        font-size: 12pt;
+    }
+    
     #arrows{
         width: 30%;
         margin-top: 20px
@@ -376,6 +396,7 @@
         padding-right: 5px;
         top: 0;
         cursor: pointer;
+        margin: 0 0 0 20px;
     }
 
     #hamburgerNav{
@@ -399,7 +420,7 @@
         text-decoration: none;
         color: black;
         font-weight: 700;
-        font-family: Helvetica, Arial, sans-serif;
+        font-family: var(--sansSerifFont);
         font-size: 14pt;
         text-align: left;
         vertical-align: baseline;
@@ -450,11 +471,13 @@
     }
 
     .introWords{
-        font-size: 35pt;
+        font-size: 25pt;
+        letter-spacing: 0.9px;
+        top: -45px;
     }
 
     #splashList{
-        font-size: 16pt;
+        font-size: 14pt;
         line-height: 125%;
     }
 
@@ -463,7 +486,7 @@
     }
 
     #checkItOut{
-        font-size: 12pt;
+        font-size: 9pt;
     }
 
     #checkItOut span{
@@ -483,10 +506,10 @@
     }
 
     /* ------- About Section -------*/
-    #aboutParagraph{
-        font-size: 14pt;
+    /* #aboutParagraph{
+        font-size: 12pt;
         line-height: 200%;
-    }
+    } */
     
     #arrows{
         display: none;
@@ -583,8 +606,13 @@
     
     /*----------- nav bar -----------*/
     #headerFullLogo{
-        width: 200px;
+        min-width: 100px;
+        max-width: 200px;
         margin-top: -5px;
+    }
+
+    #menuIcon{
+        padding-right: 0px;
     }
 
     /*----------- Back To Top Button -----------*/
@@ -628,10 +656,10 @@
     }
 
     .introWords{
-        font-size: 27pt;
-        letter-spacing: 3px;
+        font-size: 20pt;
         border-right: 2px solid black;
-        top: -24px;
+        top: -19px;
+        letter-spacing: 0.75px;
         /* positioN: static; */
         /* height: 150%; */
         line-height: 115%;
@@ -660,8 +688,9 @@
     }
 
     #splashList{
-        font-size: 13pt;
-        padding-left: 50px;
+        font-size: 12pt;
+        width: 90%;
+        padding-left: 20px;
         align-self: flex-start;
         margin: 125px 0 0 0;
     }
@@ -674,7 +703,7 @@
 
     #CircleOutlineSolid1{
         width: 50px;
-        bottom: -10vh;
+        bottom: 0vh;
         left: 35px;
         z-index: -1;
     }
@@ -689,7 +718,7 @@
         width: 50px;
         left: auto;
         right: 10px;
-        bottom: -140px;
+        bottom: -100px;
     }
 
     #CircleOutlineSolid2{
@@ -749,19 +778,14 @@
     
     /*----------- About Me -----------*/
     #aboutParagraph{
-        font-size: 12pt;
-        line-height: 200%;
+        /* font-size: 12pt; */
+        line-height: 225%;
     }
 
     h3{
         font-size: 20pt;
         margin-bottom: 15px;
         margin-top: 0;
-    }
-
-    .stackSubHeading{
-        font-size: 16pt;
-        font-weight: 200;
     }
     
     #langs{
@@ -793,16 +817,17 @@
         top: -224px;
     }
 
-    h4{
-        font-size: 18pt;
-        margin-bottom: 5px;
+    .stackSubHeading{
+        font-size: 16pt;
+        font-weight: 500;
+        margin-bottom: 10px;
     }
 
     .langsContents ul{
-        font-size: 12pt;
+        font-size: 10pt;
         line-height: 200%;
+        letter-spacing: 1.5px;
     }
-
 
     .borderSquare{
         margin: 0;
@@ -810,7 +835,60 @@
         width: 200px;
     }
     
+    #resume{
+        width: 90%;
+    }
 
+
+    #resume h5{
+        font-size: 16pt;
+    }
+
+    .resumeUnderline:nth-of-type(1)
+    {
+        width: 110px;
+    }
+
+    .resumeUnderline:nth-of-type(2)
+    {
+        width: 180px;
+    }
+
+    .resumeUnderline:nth-of-type(3)
+    {
+        width: 150px;
+    }
+
+    .resumeUnderline:nth-of-type(4)
+    {
+        width: 59px;
+    }
+
+    #resume ul{
+        line-height: 115%;
+        margin-top: 0;
+    }
+
+    .resumeBold{
+        font-size: 11.5pt;
+        /* padding-bottom: 20px; */
+    }
+
+    .resumeSubheader{
+        position: relative;
+        top: 3px;
+    }
+    
+    #resume ul .subBullets{
+        font-size: 10pt;
+        line-height: 150%;
+    }
+
+
+    #resume ul li{
+        font-size: 11pt;
+        line-height: 150%;
+    }
     /*----------- Contact -----------*/
     #contact{
         height: 500px;
@@ -835,16 +913,17 @@
     }    
 
     .formField{
-        font-size: 10pt;
+        font-size: 9pt;
         margin: 0;
         padding: 5px;
+        letter-spacing: 0;
     }
 
     #submitButton{
         font-size: 12pt;
         margin: 0;
         /* padding: 8px 4px; */
-        width: 80px;
+        width: 85px;
         height: 40px;
     }
     /* ------- Footer -------*/
@@ -859,21 +938,54 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: flex-end;
-        padding: 15px 15px 20px 15px;
+        padding: 15px 20px 20px 10px;
         box-sizing: border-box;
     }
 
     footer nav{
         width: auto;
-        grid-template-columns: 37px 55px 38px 49px;
-        grid-column-gap: 20px;
+        grid-template-columns: 38px 59px 39px 52px;
+        grid-column-gap: 10px;
         margin-bottom: 5px;
 
     }
 
-    footer a{
+    footer nav a{
         font-size: 10pt;
 
     }
 
+}
+
+@media (max-width: 325px) {
+    
+    #menuIcon{
+        width: 30px;
+    }
+
+    #headerFullLogo{
+        width: 170px;
+        /* display: none; */
+    }
+
+    /* #navbar{
+        width: 100%;
+    } */
+
+    .introWords{
+        font-size: 16pt;
+        letter-spacing: 0.7;
+        top: -15px;
+    }
+
+    #splashList{
+        font-size: 10pt;
+        width: 80%;
+        padding-left: 10px;
+        margin: 75px 0 0 0;
+    }
+
+    #resume{
+        width: 85%;
+    }
 }
