--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -100,6 +100,15 @@ button:active {
     height: auto;
 }
 
+#extraUnderline{
+    width: 100%;
+    background-color: #ffbf47;
+    height: 1px;
+    position: fixed;
+    top: 80px;
+    z-index: 2;
+}
+
 #headerFullLogo{
     box-sizing: border-box;
     width: 250px;
