--- a/responsiveStylesheet.css
+++ b/responsiveStylesheet.css
@@ -708,7 +708,7 @@
 
     #CircleOutlineSolid1{
         width: 50px;
-        bottom: 0vh;
+        bottom: -5vh;
         left: 35px;
         z-index: -1;
     }
@@ -956,13 +956,17 @@
     }
 
     footer nav a{
-        font-size: 10pt;
+        font-size: 11pt;
 
     }
 
 }
 
 @media (max-width: 325px) {
+
+    #navbar{
+        width: 100%;
+    }
     
     #menuIcon{
         width: 30px;
