--- a/responsiveStylesheet.css
+++ b/responsiveStylesheet.css
@@ -685,6 +685,7 @@
     #checkItOut{
         font-size: 9pt;
         top: 0px;
+        left: 0px;
         margin: 0;
         border-left: 1.5px solid black;
         height: 35vh;
@@ -700,7 +701,7 @@
     #splashList{
         font-size: 12pt;
         width: 90%;
-        padding-left: 20px;
+        padding-left: 30px;
         align-self: flex-start;
         margin: 100px 0 0 0;
     }
@@ -713,7 +714,7 @@
 
     #CircleOutlineSolid1{
         width: 50px;
-        bottom: -10vh;
+        bottom: -7vh;
         left: 35px;
         z-index: -1;
     }
