--- a/responsiveStylesheet.css
+++ b/responsiveStylesheet.css
@@ -62,6 +62,25 @@
     .langsList{
         font-size: 11pt;
     }
+
+    /*----------- Contact Section -----------*/
+    #onTheWebDiv{
+        width: 400px;
+    }
+    
+    #onTheWebOutline{
+        width: 397px;
+        /* margin-left: -413px; */
+    }
+    
+    #sendMeAMsgDiv{
+        width: 400px;
+    }
+    
+    #sendMeAMsgOutline{
+        width: 397px;
+        /* margin-left: -413px; */
+    }
 }
 
 @media (max-width: 1270px) {
@@ -151,6 +170,29 @@
         width: 90%;
     }
 
+
+    /* ------- Contact Section -------*/
+    #onTheWebDiv{
+        width: 300px;
+    }
+    
+    #onTheWebOutline{
+        width: 297px;
+        /* margin-left: -313px; */
+    }
+    
+    #sendMeAMsgDiv{
+        width: 300px;
+    }
+    
+    #sendMeAMsgOutline{
+        width: 297px;
+        /* margin-left: -313px; */
+    }
+
+    .contactP, #email{
+        font-size: 12pt;
+    }
 }
 
 @media (max-width: 1075px) {
@@ -325,25 +367,48 @@
         padding: 18%;
     }
 
-    /* .resumeUnderline:nth-of-type(1)
-    {
-        width: 123px;
+
+    /* ------- Contact Section -------*/
+    #contactDiv{
+        justify-content: space-between;
+    }
+    
+    .contactSubDivs{
+        height: 125px;
     }
 
-    .resumeUnderline:nth-of-type(2)
-    {
-        width: 199px;
+    .contactOutline{
+        height: 123px;
+        margin-top: -135px;
+    }
+    
+    #onTheWebDiv{
+        width: 200px;
+        margin: 0;
+    }
+    
+    #onTheWebOutline{
+        width: 197px;
+        margin-left: -10px;
+    }
+    
+    #sendMeAMsgDiv{
+        width: 275px;
+        margin: 0;
+    }
+    
+    #sendMeAMsgOutline{
+        width: 273px;
+        margin-left: -10px;
     }
 
-    .resumeUnderline:nth-of-type(3)
-    {
-        width: 167px;
+    .contactP, #email{
+        font-size: 11pt;
     }
 
-    .resumeUnderline:nth-of-type(4)
-    {
-        width: 67px;
-    } */
+    .socialIcons{
+        width: 30px;
+    }
 
 }
 
@@ -556,6 +621,58 @@
     {
         width: 67px;
     } */
+
+
+    /* ------- Contact Section -------*/
+    #contactDiv{
+        flex-direction: column;
+    }
+
+    #contactDiv{
+        justify-content: space-between;
+    }
+    
+    /* .contactSubDivs{
+        height: 125px;
+    } */
+
+    /* .contactOutline{
+        height: 123px;
+        margin-top: -135px;
+    } */
+    
+    .contactWrapper:first-of-type{
+        margin-bottom: 50px;
+    }
+
+    #onTheWebDiv{
+        width: 100%;
+        margin: 0;
+    }
+    
+    #onTheWebOutline{
+        width: 99%;
+        margin-left: -10px;
+    }
+    
+    #sendMeAMsgDiv{
+        width: 100%;
+        margin: 0;
+    }
+    
+    #sendMeAMsgOutline{
+        width: 99%;
+        margin-left: -10px;
+    }
+
+    /* .contactP, #email{
+        font-size: 11pt;
+    }
+
+    .socialIcons{
+        width: 30px;
+    } */
+
 
     /* ------- Footer -------*/
     #footerOutline2{
