--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -637,12 +637,12 @@ h3{
     font-family: var(--sansSerifFont);;
     font-size: 2.25rem;
     font-weight: 800;
-    margin: 0 0 75px 0;
+    margin: 0 0 40px 0;
     display: flex;
     justify-content: center;
 }
 
-.stackSubHeading{
+/* .stackSubHeading{
     appearance: none;
     -webkit-appearance: none;
     font-family: var(--sansSerifFont);;
@@ -650,17 +650,107 @@ h3{
     font-weight: 600;
     text-decoration: black solid underline 2px;
     margin: 0 0 7px 0.6rem;
+} */
+
+#langBoxWrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
 }
 
 #langs{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    /* margin-top: 0px; */
+    width: 780px;
+    margin: 0;
+    /* border: 2px solid black; */
+    position: relative;
+    z-index: 0;
+}
+
+.stackWrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    transition: transform 0.3s ease-in-out;
+    margin: 25px 40px;
+    height: 140px;
+    position: relative;
+    z-index: 2;
+    /* width: 400px; */
+    /* text-shadow: 1px 1px 0px var(--baseYellow); */
+}
+
+
+.stackWrapper p{
+    margin: 20px 0 0 0;
+    font-weight: 400;
+}
+
+/* .stackLogos{
+    height: 60px;
+} */
+
+
+#javaLogo{
+    width: 65px;
+}
+
+#jsLogo, #htmlLogo, #cssLogo{
+    width: 50px;
+}
+
+#nodeLogo{
+    width: 170px;
+}
+
+#expressLogo{
+    width: 140px;
+}
+
+#pythonLogo{
+    width: 60px;
+}
+
+#sqlLogo{
+    width: 100px;
+}
+
+#mongoDBlogo{
+    width: 200px;
+}
+
+.bracketDiv{
+    border: 3px solid black;
+    width: 50px;
+}
+
+.bracketDiv:first-of-type{
+    border-right: none;
+    box-shadow: -5px 5px 0px var(--baseYellow);
+    margin-right: -2.5%;
+}
+
+.bracketDiv:last-of-type{
+    border-left: none;
+    box-shadow: 5px 5px 0px var(--baseYellow);
+    margin-left: -2.5%;
+}
+
+
+/* #langs{
     display: flex;
     justify-content: center;
     height: 300px;
     margin-top: 0px;
-}
+} */
 
-.langGroup{
-    /* margin: 0 50px; */
+/* .langGroup{
     height: 300px;
 }
 
@@ -678,7 +768,6 @@ h3{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    /* border: 1px solid black; */
 }
 
 .langsContents ul{
@@ -699,13 +788,11 @@ h3{
     height: 282px;
     margin-top: -25px;
     margin-right: 13px;
-    /* position: relative;
-    z-index: 2;
-    top: 310px;
-    left: -20px; */
-}
+} */
+
+
 #resumeHeader{
-    margin-top: 75px;
+    margin-top: 125px;
     margin-bottom: 20px;
 }
 
