--- a/responsiveStylesheet.css
+++ b/responsiveStylesheet.css
@@ -565,11 +565,10 @@
     
     h3{
         font-size: 20pt;
-        margin-bottom: 15px;
         margin-top: 5px;
     }
 
-    #langs{
+    /* #langs{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -601,7 +600,7 @@
     #resume ul{
         list-style-position: outside;
         padding-left: 5%;
-    }
+    } */
 
     /* .resumeUnderline:nth-of-type(1)
     {
