--- a/responsiveStylesheet.css
+++ b/responsiveStylesheet.css
@@ -568,6 +568,37 @@
         margin-top: 5px;
     }
 
+    .stackWrapper{
+        height: 130px;
+    }
+
+    #javaLogo{
+        width: 55px;
+    }
+    
+    #jsLogo, #htmlLogo, #cssLogo{
+        width: 40px;
+    }
+    
+    #nodeLogo{
+        width: 155px;
+    }
+    
+    #expressLogo{
+        width: 125px;
+    }
+    
+    #pythonLogo{
+        width: 45px;
+    }
+    
+    #sqlLogo{
+        width: 85px;
+    }
+    
+    #mongoDBlogo{
+        width: 185px;
+    }
     /* #langs{
         display: flex;
         flex-wrap: wrap;
@@ -875,8 +906,41 @@
         margin-bottom: 15px;
         margin-top: 0;
     }
+
+    .stackWrapper{
+        height: 120px;
+        margin: 15px 30px;
+    }
+
+    #javaLogo{
+        width: 45px;
+    }
     
-    #langs{
+    #jsLogo, #htmlLogo, #cssLogo{
+        width: 35px;
+    }
+    
+    #nodeLogo{
+        width: 145px;
+    }
+    
+    #expressLogo{
+        width: 115px;
+    }
+    
+    #pythonLogo{
+        width: 35px;
+    }
+    
+    #sqlLogo{
+        width: 75px;
+    }
+    
+    #mongoDBlogo{
+        width: 175px;
+    }
+    
+    /* #langs{
         height: 450px;
         width: 230px;
         flex: wrap;
@@ -921,7 +985,7 @@
         margin: 0;
         height: 200px;
         width: 200px;
-    }
+    } */
     
     #resume{
         width: 90%;
@@ -1045,7 +1109,7 @@
 
 }
 
-@media (max-width: 330px) {
+@media (max-width: 365px) {
     /*----------- Header -----------*/
     #navbar{
         width: 100%;
@@ -1103,5 +1167,14 @@
     .projects a{
         width: 25px;
         height: 25px;
+    }
+
+/*----------- About -----------*/
+    #langs{
+       width: 60%; 
+    }    
+
+    .stackWrapper{
+        width: 100%;
     }
 }
